--- a/compile/index.html
+++ b/compile/index.html
@@ -9,6 +9,7 @@
 		</title>
 
 		<link rel="stylesheet" href="stylesheets/app.min.css" />
+		<link rel="stylesheet" href="stylesheets/svg-sprites/css/sprite.css" />
 
 		<!--[if lt IE 9]>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -25,8 +26,17 @@
 
 			
 
+<div class="svg-outlink-logo svg-outlink-logo-dims"></div>
 
+<div class="svg-scanning svg-scanning-dims"></div>
 
+<div class="svg-check-site svg-check-site-dims"></div>
+
+<div class="svg-out-link svg-out-link-dims"></div>
+
+<div class="svg-pay-free svg-pay-free-dims"></div>
+
+<div class="svg-postman svg-postman-dims"></div>
 		
 		</div>
 
