Begin create index-page

--- a/compile/index.html
+++ b/compile/index.html
@@ -19,28 +19,53 @@
 
 	</head>
 	<body>
-		
-		
-		
-		<div class="content">
-
+		<div class="page"><span class="page__bg"></span><span class="page__bg"></span><div class="page__content">
 			
+			
+			<div class="content">
 
-<div class="svg-outlink-logo svg-outlink-logo-dims"></div>
+				
 
-<div class="svg-scanning svg-scanning-dims"></div>
+<div class="row">
+	<div class="col-xs-8">
+		<div class="svg-outlink-logo svg-outlink-logo-dims"></div>
+	</div>
+	<div class="col-xs-8">
+		<div class="svg-scanning svg-scanning-dims"></div>
+	</div>
+	<div class="col-xs-8">
+		<div class="svg-check-site svg-check-site-dims"></div>
+	</div>
+	<div class="col-xs-8">
+		<div class="svg-out-link svg-out-link-dims"></div>
+	</div>
+	<div class="col-xs-8">
+		<div class="svg-pay-free svg-pay-free-dims"></div>
+	</div>
+	<div class="col-xs-8">
+		<div class="svg-postman svg-postman-dims"></div>
+	</div>
+</div>
+			
+			</div>
 
-<div class="svg-check-site svg-check-site-dims"></div>
-
-<div class="svg-out-link svg-out-link-dims"></div>
-
-<div class="svg-pay-free svg-pay-free-dims"></div>
-
-<div class="svg-postman svg-postman-dims"></div>
-		
 		</div>
-
 		
+<footer class="footer">
+	<div class="row">
+		<div class="col-xs-24">
+			<p>
+			&copy; 2010-2015
+			<br />
+			Все права защищены. Outlink.ru
+			</p>
+		</div>
+		<div class="col-xs-24">
+			
+		</div>
+	</div>
+</footer>
+		</div>
 		
 				
 <script src="javascripts/libs.min.js"></script>
