--- a/compile/index.html
+++ b/compile/index.html
@@ -22,7 +22,7 @@
 		<span class="page__bg"></span><span class="page__bg"></span>
 		<div class="page page--dark"><div class="page__content">
 			
-<header class="header p-t-45">
+<header class="header">
 
 	<i class="icons icons--element-1"></i>
 	<i class="icons icons--element-2"></i>
@@ -213,31 +213,37 @@
 		</div>
 		
 <footer class="footer">
-	<div class="row">
-		<div class="col-xs-24">
-			<p>
-			&copy; 2010-2015
-			<br />
-			Все права защищены. Outlink.ru
-			</p>
-		</div>
-		<div class="col-xs-24">
-			
-			<div class="media pull-right">
-				<div class="media-left">
-					<i class="icons icons--spacebox-logo"></i>
-				</div>
-				<div class="media-body width-auto">
-					<p>
-						Разработка сайта
-						<br />
-						<a href="http://www.spacebox.ru/"><span class="decorate">Spacebox</span></a>
-					</p>
-				</div>
+	
+	<div class="container">
+	
+		<div class="row">
+			<div class="col-xs-24">
+				<p>
+				&copy; 2010-2015
+				<br />
+				Все права защищены. Outlink.ru
+				</p>
 			</div>
-			
+			<div class="col-xs-24">
+				
+				<div class="media pull-right">
+					<div class="media-left">
+						<i class="icons icons--spacebox-logo"></i>
+					</div>
+					<div class="media-body width-auto">
+						<p>
+							Разработка сайта
+							<br />
+							<a href="http://www.spacebox.ru/"><span class="decorate">Spacebox</span></a>
+						</p>
+					</div>
+				</div>
+				
+			</div>
 		</div>
+	
 	</div>
+	
 </footer>
 		</div>
 		
