--- a/compile/guideline.html
+++ b/compile/guideline.html
@@ -86,10 +86,35 @@
 		</div>
 		
 		<div class="col-xs-8 p-l-10">
-			&nbsp;
+			<i class="icons icons--arrow-left"></i>
 		</div>
 		<div class="col-xs-8 p-l-10">
-			&nbsp;
+			&lt;i class="icons icons--arrow-left"&gt;&lt;/i&gt;
+		</div>
+		
+		<div class="col-xs-8 p-l-10">
+			<i class="icons icons--arrow-right"></i>
+		</div>
+		<div class="col-xs-8 p-l-10">
+			&lt;i class="icons icons--arrow-right"&gt;&lt;/i&gt;
+		</div>
+		
+	</div>
+	
+	<div class="row p-t-10 p-b-10 relative z-index-10">
+		
+		<div class="col-xs-8 p-l-10">
+			<i class="icons icons--arrow-left-unactive"></i>
+		</div>
+		<div class="col-xs-8 p-l-10">
+			&lt;i class="icons icons--arrow-left-unactive"&gt;&lt;/i&gt;
+		</div>
+		
+		<div class="col-xs-8 p-l-10">
+			<i class="icons icons--arrow-right-unactive"></i>
+		</div>
+		<div class="col-xs-8 p-l-10">
+			&lt;i class="icons icons--arrow-right-unactive"&gt;&lt;/i&gt;
 		</div>
 		
 		<div class="col-xs-8 p-l-10">
