--- a/compile/inner.html
+++ b/compile/inner.html
@@ -22,7 +22,7 @@
 		
 		<span class="page__bg"></span><span class="page__bg"></span>
 		
-		<div class="page page--light"><div class="page__content">
+		<div class="page page--light"><div class="page__content p-b-85">
 			
 			
 <header class="header">
@@ -84,6 +84,471 @@
 	</div>
 	
 </div>
+
+<div class="line line--dark scanning">
+	<div class="row">
+		<div class="col-xs-10">
+			<div class="scanning__item">
+				<span class="scanning__item-title">Просканировано страниц<span class="badge scanning__item-badge" href="" data-container="body" data-toggle="popover" data-placement="right" data-html="true" data-content="<p>Этот пункт означает сколько раз ссылаются на сайты ваши ссылки и т.д.</p><p>Еще пару абзацев текста, чтобы подробнее раскрыть этот пункт</>">?</span></span>
+				<a class="scanning__item-num" href=""><span class="decorate">3157</span></a>
+			</div>
+		</div>
+		<div class="col-xs-10">
+			<div class="scanning__item">
+				<span class="scanning__item-title">Исходящих ссылок<span class="badge scanning__item-badge" href="" data-container="body" data-toggle="popover" data-placement="right" data-html="true" data-content="<p>Этот пункт означает сколько раз ссылаются на сайты ваши ссылки и т.д.</p><p>Еще пару абзацев текста, чтобы подробнее раскрыть этот пункт</p>">?</span></span>
+				<span class="scanning__item-num">3780</span>
+			</div>
+		</div>
+		<div class="col-xs-10">
+			<div class="scanning__item">
+				<span class="scanning__item-title">Ссылаются на сайты<span class="badge scanning__item-badge" href="" data-container="body" data-toggle="popover" data-placement="right" data-html="true" data-content="<p>Этот пункт означает сколько раз ссылаются на сайты ваши ссылки и т.д.</p><p>Еще пару абзацев текста, чтобы подробнее раскрыть этот пункт</p>">?</span></span>
+				<span class="scanning__item-num">3780</span>
+			</div>
+		</div>
+		<div class="col-xs-18 p-t-5 text-right">
+			<a class="btn btn--green" href="">Перепроверить сайт</a>
+		</div>
+	</div>
+</div>
+
+
+<div class="results">
+	
+	<div class="line">
+		<h3 class="results__title">
+			Показаны записи 1-10 из 3780
+		</h3>
+	</div>
+	
+	<div class="results__header">
+		<div class="row">
+			<div class="col-xs-3 text-center">
+				№
+			</div>
+			<div class="col-xs-37">
+				Внешняя ссылка
+			</div>
+			<div class="col-xs-8 text-center">
+				Встречается
+			</div>
+		</div>
+	</div>
+	
+	<div class="line">
+		<div class="results__item">
+			<div class="row">
+				<div class="col-xs-3 results__item-num text-center">
+					1
+				</div>
+				<div class="col-xs-37">
+					<a href="#collapsePane-1" data-toggle="collapse" aria-expanded="false"><span class="decorate">leninkatour.ru/</span></a>
+				</div>
+				<div class="col-xs-8 text-center">
+					3266
+				</div>
+			</div>
+		</div>
+		<div id="collapsePane-1" class="results__detail collapse">
+			<div class="results__detail-in">
+				<div class="row results__detail-line">
+					<div class="col-xs-3 results__item-num text-center">
+						2.1
+					</div>
+					<div class="col-xs-45">
+						<a href=""><span class="decorate">spacebox.ru/ru/root3444/root34443451/root344434513465/</span></a>
+					</div>
+				</div>
+				<div class="row results__detail-line">
+					<div class="col-xs-3 results__item-num text-center">
+						2.2
+					</div>
+					<div class="col-xs-45">
+						<a href=""><span class="decorate">spacebox.ru/ru/s4/s59/s595427/</span></a>
+					</div>
+				</div>
+				<div class="row results__detail-line">
+					<div class="col-xs-3 results__item-num text-center">
+						2.3
+					</div>
+					<div class="col-xs-45">
+						<a href=""><span class="decorate">spacebox.ru/ru</span></a>
+					</div>
+				</div>
+				<div class="row results__detail-line">
+					<div class="col-xs-3 results__item-num text-center">
+						2.4
+					</div>
+					<div class="col-xs-45">
+						<a href=""><span class="decorate">spacebox.ru/ru/s1/s13479/s134794996/</span></a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<div class="line">
+		<div class="results__item">
+			<div class="row">
+				<div class="col-xs-3 results__item-num text-center">
+					2
+				</div>
+				<div class="col-xs-37">
+					<a href="#collapsePane-2" data-toggle="collapse" aria-expanded="false"><span class="decorate">spacebox.ru</span></a>
+				</div>
+				<div class="col-xs-8 text-center">
+					2188
+				</div>
+			</div>
+		</div>
+		<div id="collapsePane-2" class="results__detail collapse">
+			<div class="results__detail-in">
+				<div class="row results__detail-line">
+					<div class="col-xs-3 results__item-num text-center">
+						2.1
+					</div>
+					<div class="col-xs-45">
+						<a href=""><span class="decorate">spacebox.ru/ru/root3444/root34443451/root344434513465/</span></a>
+					</div>
+				</div>
+				<div class="row results__detail-line">
+					<div class="col-xs-3 results__item-num text-center">
+						2.2
+					</div>
+					<div class="col-xs-45">
+						<a href=""><span class="decorate">spacebox.ru/ru/s4/s59/s595427/</span></a>
+					</div>
+				</div>
+				<div class="row results__detail-line">
+					<div class="col-xs-3 results__item-num text-center">
+						2.3
+					</div>
+					<div class="col-xs-45">
+						<a href=""><span class="decorate">spacebox.ru/ru</span></a>
+					</div>
+				</div>
+				<div class="row results__detail-line">
+					<div class="col-xs-3 results__item-num text-center">
+						2.4
+					</div>
+					<div class="col-xs-45">
+						<a href=""><span class="decorate">spacebox.ru/ru/s1/s13479/s134794996/</span></a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<div class="line">
+		<div class="results__item">
+			<div class="row">
+				<div class="col-xs-3 results__item-num text-center">
+					3
+				</div>
+				<div class="col-xs-37">
+					<a href="#collapsePane-3" data-toggle="collapse" aria-expanded="false"><span class="decorate">spacebox.ru/izgotovlenie_saita/</span></a>
+				</div>
+				<div class="col-xs-8 text-center">
+					2837
+				</div>
+			</div>
+		</div>
+		<div id="collapsePane-3" class="results__detail collapse">
+			<div class="results__detail-in">
+				<div class="row results__detail-line">
+					<div class="col-xs-3 results__item-num text-center">
+						3.1
+					</div>
+					<div class="col-xs-45">
+						<a href=""><span class="decorate">spacebox.ru/ru/root3444/root34443451/root344434513465/</span></a>
+					</div>
+				</div>
+				<div class="row results__detail-line">
+					<div class="col-xs-3 results__item-num text-center">
+						3.2
+					</div>
+					<div class="col-xs-45">
+						<a href=""><span class="decorate">spacebox.ru/ru/s4/s59/s595427/</span></a>
+					</div>
+				</div>
+				<div class="row results__detail-line">
+					<div class="col-xs-3 results__item-num text-center">
+						3.3
+					</div>
+					<div class="col-xs-45">
+						<a href=""><span class="decorate">spacebox.ru/ru</span></a>
+					</div>
+				</div>
+				<div class="row results__detail-line">
+					<div class="col-xs-3 results__item-num text-center">
+						3.4
+					</div>
+					<div class="col-xs-45">
+						<a href=""><span class="decorate">spacebox.ru/ru/s1/s13479/s134794996/</span></a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<div class="line">
+		<div class="results__item">
+			<div class="row">
+				<div class="col-xs-3 results__item-num text-center">
+					4
+				</div>
+				<div class="col-xs-37">
+					<a href="#collapsePane-4" data-toggle="collapse" aria-expanded="false"><span class="decorate">vk.com/leninka_ru</span></a>
+				</div>
+				<div class="col-xs-8 text-center">
+					9292
+				</div>
+			</div>
+		</div>
+		<div id="collapsePane-4" class="results__detail collapse">
+			<div class="results__detail-in">
+				<div class="row results__detail-line">
+					<div class="col-xs-3 results__item-num text-center">
+						4.1
+					</div>
+					<div class="col-xs-45">
+						<a href=""><span class="decorate">rsl.ru/ru/root3444/root34443451/root344434513465/</span></a>
+					</div>
+				</div>
+				<div class="row results__detail-line">
+					<div class="col-xs-3 results__item-num text-center">
+						4.2
+					</div>
+					<div class="col-xs-45">
+						<a href=""><span class="decorate">rsl.ru/ru/s4/s59/s595427/</span></a>
+					</div>
+				</div>
+				<div class="row results__detail-line">
+					<div class="col-xs-3 results__item-num text-center">
+						4.3
+					</div>
+					<div class="col-xs-45">
+						<a href=""><span class="decorate">rsl.ru/ru</span></a>
+					</div>
+				</div>
+				<div class="row results__detail-line">
+					<div class="col-xs-3 results__item-num text-center">
+						4.4
+					</div>
+					<div class="col-xs-45">
+						<a href=""><span class="decorate">rsl.ru/ru/s1/s13479/s134794996/</span></a>
+					</div>
+				</div>
+				<div class="row results__detail-line">
+					<div class="col-xs-3 results__item-num text-center">
+						4.5
+					</div>
+					<div class="col-xs-45">
+						<a href=""><span class="decorate">rsl.ru/ru/s410/s4106413/</span></a>
+					</div>
+				</div>
+				<div class="row results__detail-line">
+					<div class="col-xs-3 results__item-num text-center">
+						4.6
+					</div>
+					<div class="col-xs-45">
+						<a href=""><span class="decorate">rsl.ru/ru/s410/nel</span></a>
+					</div>
+				</div>
+				<div class="row results__detail-line">
+					<div class="col-xs-3 results__item-num text-center">
+						4.7
+					</div>
+					<div class="col-xs-45">
+						<a href=""><span class="decorate">rsl.ru/ru/s7/s409/2015/galeni</span></a>
+					</div>
+				</div>
+				<div class="row results__detail-line">
+					<div class="col-xs-3 results__item-num text-center">
+						4.8
+					</div>
+					<div class="col-xs-45">
+						<a href=""><span class="decorate">rsl.ru/ru/news/271015</span></a>
+					</div>
+				</div>
+				<div class="row results__detail-line">
+					<div class="col-xs-3 results__item-num text-center">
+						4.9
+					</div>
+					<div class="col-xs-45">
+						<a href=""><span class="decorate">rsl.ru/ru/s4/s59/d172/</span></a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<div class="line">
+		<div class="results__item">
+			<div class="row">
+				<div class="col-xs-3 results__item-num text-center">
+					5
+				</div>
+				<div class="col-xs-37">
+					<a href=""><span class="decorate">tripadvisor.ru/Attraction_Review-g298484-d573181-Reviews-Russian_State_Library-...</span></a>
+				</div>
+				<div class="col-xs-8 text-center">
+					3778
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<div class="line">
+		<div class="results__item">
+			<div class="row">
+				<div class="col-xs-3 results__item-num text-center">
+					6
+				</div>
+				<div class="col-xs-37">
+					<a href=""><span class="decorate">twitter.com/Leninka_ru</span></a>
+				</div>
+				<div class="col-xs-8 text-center">
+					2922
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<div class="line">
+		<div class="results__item">
+			<div class="row">
+				<div class="col-xs-3 results__item-num text-center">
+					7
+				</div>
+				<div class="col-xs-37">
+					<a href="#collapsePane-7" data-toggle="collapse" aria-expanded="false"><span class="decorate">flickr.com/photos/leninka/</span></a>
+				</div>
+				<div class="col-xs-8 text-center">
+					837
+				</div>
+			</div>
+		</div>
+		<div id="#collapsePane-7" class="results__detail collapse">
+			<div class="results__detail-in">
+				<div class="row results__detail-line">
+					<div class="col-xs-3 results__item-num text-center">
+						7.1
+					</div>
+					<div class="col-xs-45">
+						<a href=""><span class="decorate">rsl.ru/ru/s410/nel</span></a>
+					</div>
+				</div>
+				<div class="row results__detail-line">
+					<div class="col-xs-3 results__item-num text-center">
+						7.2
+					</div>
+					<div class="col-xs-45">
+						<a href=""><span class="decorate">rsl.ru/ru/s7/s409/2015/galeni</span></a>
+					</div>
+				</div>
+				<div class="row results__detail-line">
+					<div class="col-xs-3 results__item-num text-center">
+						7.3
+					</div>
+					<div class="col-xs-45">
+						<a href=""><span class="decorate">rsl.ru/ru/news/271015</span></a>
+					</div>
+				</div>
+				<div class="row results__detail-line">
+					<div class="col-xs-3 results__item-num text-center">
+						7.4
+					</div>
+					<div class="col-xs-45">
+						<a href=""><span class="decorate">rsl.ru/ru/s4/s59/d172/</span></a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<div class="line">
+		<div class="results__item">
+			<div class="row">
+				<div class="col-xs-3 results__item-num text-center">
+					8
+				</div>
+				<div class="col-xs-37">
+					<a href=""><span class="decorate">youtube.com/user/RussianStateLibrary</span></a>
+				</div>
+				<div class="col-xs-8 text-center">
+					92
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<div class="line">
+		<div class="results__item">
+			<div class="row">
+				<div class="col-xs-3 results__item-num text-center">
+					9
+				</div>
+				<div class="col-xs-37">
+					<a href=""><span class="decorate">facebook.com/pages/Rossijskaa-gosudarstvennaa-biblioteka/122637967785435</span></a>
+				</div>
+				<div class="col-xs-8 text-center">
+					38
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<div class="line">
+		<div class="results__item">
+			<div class="row">
+				<div class="col-xs-3 results__item-num text-center">
+					10
+				</div>
+				<div class="col-xs-37">
+					<a href=""><span class="decorate">leninka-ru.livejournal.com/</span></a>
+				</div>
+				<div class="col-xs-8 text-center">
+					2929
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<nav>
+		<ul class="pagination">
+			<li>
+				<a class="pagination__prev disabled" href="#" aria-label="Пред.">
+					<i class="icons icons--arrow-left" aria-hidden="true"></i>Пред.
+				</a>
+			</li>
+			<li>
+				<a class="active" href="#">1</a>
+			</li>
+			<li>
+				<a href="#">2</a>
+			</li>
+			<li>
+				<a href="#">3</a>
+			</li>
+			<li>
+				<a href="#">4</a>
+			</li>
+			<li>
+				<span>...</span>
+			</li>		
+			<li>
+				<a href="#">5</a>
+			</li>
+			<li>
+				<a class="pagination__next href="#" aria-label="След.">
+					След.<i class="icons icons--arrow-right" aria-hidden="true"></i>
+				</a>
+			</li>
+		</ul>
+	</nav>	
+	
+</div>
+
 
 			
 			</div>
