--- a/compile/inner - копия.html
+++ b/compile/inner - копия.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="viewport" content="width=950, initial-scale=1.0" />
 		<title>
-			Отчет для rsl.ru
+			Главная страница
 		</title>
 
 		<link rel="stylesheet" href="stylesheets/app.min.css" />
@@ -37,14 +37,14 @@
 				</a>
 
 			</div>
-			<div class="col-xs-24 p-r-45">
+			<div class="col-xs-24">
 
 				<div class="row nowrap pull-right text-right">
 					<div class="col-xs-24">
-						<a class="header__link" href="help.html"><i class="icons icons--help"></i><span class="decorate">Помощь</span></a>
+						<a class="header__link" href=""><i class="icons icons--help"></i><span class="decorate">Помощь</span></a>
 					</div>
 					<div class="col-xs-24">
-						<a class="header__link" href="about.html"><i class="icons icons--info"></i><span class="decorate">О проекте</span></a>
+						<a class="header__link" href=""><i class="icons icons--info"></i><span class="decorate">О проекте</span></a>
 					</div>
 				</div>
 				
