--- a/compile/index.html
+++ b/compile/index.html
@@ -48,7 +48,7 @@
 	<div class="row">
 		<div class="col-xs-12 p-t-10">
 			
-			<a class="header__logotpe" href="">
+			<a class="header__logotpe" href="index.html">
 				<i class="icons icons--outlink-logo"></i>
 			</a>
 
@@ -246,7 +246,8 @@
 		
 				
 <script src="javascripts/libs.min.js"></script>
-<script src="javascripts/app.min.js"></script>
 
+<script src="javascripts/app.min.js"></script>
+<script src="javascripts/rainbow.js"></script>
 	</body>
 </html>
