--- a/compile/about.html
+++ b/compile/about.html
@@ -32,7 +32,7 @@
 		<div class="row">
 			<div class="col-xs-24">
 				
-				<a class="header__logotpe m-l-30" href="">
+				<a class="header__logotpe m-l-30" href="index.html">
 					<i class="icons icons--outlink-logo"></i>
 				</a>
 
@@ -139,8 +139,9 @@
 		
 				
 <script src="javascripts/libs.min.js"></script>
-<script src="javascripts/app.min.js"></script>
 
+<script src="javascripts/app.min.js"></script>
+<script src="javascripts/rainbow.js"></script>
 		
 	</body>
 </html>
