--- a/compile/about.html
+++ b/compile/about.html
@@ -60,7 +60,7 @@
 
 				
 
-<div class="line p-t-70 p-b-30">
+<div class="line p-t-40 p-b-35">
 	
 	<h1>
 		О проекте
@@ -69,27 +69,72 @@
 </div>
 
 <div class="row">
-	<div class="col-xs-11">
-		<nav class="leftnav">
-			<ul>
-				<li class="leftnav__item">
-					<a href=""><span class="decorate">Как наличие исходящих ссылок влияет на ваши позиции в поиске гугл и яндекс?</span></a>
-				</li>
-				<li class="leftnav__item">
-					<a href=""><span class="decorate">Как найти исходящую ссылку на сайте?</span></a>
-				</li>
-				<li class="leftnav__item">
-					<a href=""><span class="decorate"></span></a>
-				</li>
-				<li class="leftnav__item">
-					<a href=""><span class="decorate"></span></a>
-				</li>
-			</ul>
-		</nav>
+	<div class="col-xs-29 p-l-45">
+		
+		<h2>
+			История
+		</h2>
+		
+		<h5>
+			«Outlink» основан в 2016-м году. Издателем проекта является компания «<a href="">Spacebox</a>»
+		</h5>
+		
+		<p>
+			«Outlink» — крупнейший в Европе ресурс для IT-специалистов с ежемесячной аудиторией более 10 млн уникальных пользователей. За время существования из небольшого отраслевого сайта он вырос в глобальную площадку и дал жизнь нескольким проектам, выделившимся из «Хабра» в разные периоды времени.
+		</p>
+		
+		<h2>
+			Обратная связь
+		</h2>
+		
+		<h5>
+			У меня есть вопрос по сайту
+		</h5>
+		
+		<p>
+			Прежде чем задать вопрос, попробуйте посетить справочный раздел — в нём опубликованы ответы на большинство <a href="">часто задаваемых вопросов</a>.
+		</p>
+		
+		<h5>
+			У меня проблемы. Что делать?
+		</h5>
+		
+		<p>
+			Мы не сможем решить всех проблем, но если на «Outlink» что-то работает не так, мы стараемся реагировать оперативно — исправляем, дополняем, объясняем. Если вы нашли ошибку, напишите в нашу <a href="">службу поддержки</a>.
+		</p>
+		
+		<h5>
+			У меня есть идея. Как поделиться?
+		</h5>
+		
+		<p>
+			Если вы знаете, как сделать «Outlink» лучше, напишите в <a href="">службу поддержки</a>.
+		</p>
+		
 	</div>
-	<div class="col-xs-37">
+	<div class="col-xs-14 col-xs-offset-5 m-b-50">
 		
+		<i class="icons icons--mail m-b-10"></i>
 		
+		<h2>
+			Свяжитесь с нами
+		</h2>
+		
+		<p>
+			«Outlink» — крупнейший в Европе ресурс для IT-специалистов с ежемесячной аудиторией более 10 млн уникальных пользователей.
+		</p>
+		
+		<form class="p-r-10" action="">
+			
+			<input class="form-control form-control--yellow form-control--small m-b-15" type="text" placeholder="Ваше имя ..." />
+			
+			<input class="form-control form-control--yellow form-control--small m-b-15" type="text" placeholder="Адрес электронной почты..." />
+			
+			<textarea class="form-control form-control--yellow form-control--small m-b-15" placeholder="Текст сообщения ..."></textarea>
+			
+			<a href="" class="btn btn--font-14 btn--middle btn--bold btn--violet fancybox">Отправить</a>
+			
+		</form>
 		
 	</div>
 </div>
