--- a/compile/index.html
+++ b/compile/index.html
@@ -23,7 +23,12 @@
 		<div class="page page--dark"><div class="page__content p-b-85">
 			
 <header class="header">
-
+	
+	<div id="chartLeft" class="chart-left"></div>
+	
+	<div id="chartRight" class="chart-right"></div>
+	
+	<!--
 	<i class="icons icons--element-1"></i>
 	<i class="icons icons--element-2"></i>
 	<i class="icons icons--element-3"></i>
@@ -44,7 +49,8 @@
 	<i class="icons icons--element-17"></i>
 	<i class="icons icons--element-18"></i>
 	<i class="icons icons--element-19"></i>
-
+	-->
+	
 	<div class="row">
 		<div class="col-xs-12 p-t-10">
 			
