--- a/compile/index.html
+++ b/compile/index.html
@@ -145,7 +145,7 @@
 	</div>
 </div>
 
-<div class="services">
+<div class="services m-b-30">
 	<div class="row">
 		<div class="col-xs-14">
 			<div class="services__item">
